added all pages

--- a/public/pages-login-admin.html
+++ b/public/pages-login-admin.html
@@ -62,7 +62,7 @@
                       </div>
                     </div>
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="button" onclick="getInfo()">Login</button>
+                      <button class="btn btn-primary w-100" type="button" onclick="getInfom()">Login</button>
                     </div>  
                   </form>
 
