updated the time table

--- a/public/admin-student.html
+++ b/public/admin-student.html
@@ -161,8 +161,8 @@
               <% users.forEach(function(user){ %>
                 <tr>
                   <th scope="row"><%= user.id %></th>
-                  <td><%= user.student_name %></td>
-                  <td><%= user.student_program %></td>
+                  <td><%= user.name %></td>
+                  <td><%= user.course %></td>
                   <td><%= user.student_id %></td>
                   <td><i class="fas fa-edit btnedit"></i></td>
                   <td><i class="fas fa-trash-alt btndelete"></i></td>
